2008-12-18  Federico Mena Quintero  <federico@novell.com>

	* xrandr-capplet.c (get_output_for_window): Include "off" outputs
	in the intersected rectangles.  This makes the capplet not select
	a new output when changing virtual desktops.

2008-12-18  Federico Mena Quintero  <federico@novell.com>

	https://bugzilla.novell.com/show_bug.cgi?id=433939 - It's not
	obvious how to turn on a new monitor.

	* display-capplet.glade: Add On/Off radio buttons for the selected
	monitor, as it is hard to find that the on/off state is actually
	set by the Resolution combo.

	* xrandr-capplet.c (rebuild_gui): Don't set sensitivity of
	resolution_combo here...
	(rebuild_resolution_combo): ... but do it here instead.  This is
	so that we can match the state of the monitor on/off buttons.
	(rebuild_on_off_radios): New function.  We set the on/off radio
	buttons based on the "on" state of the current output.
	(monitor_on_off_toggled_cb): New callback; we toggle the current
	output's on/off state.
	(rebuild_resolution_combo): Desensitize the resolution combo when
	the output is off.  Don't add an "Off" item to it, either.

2008-12-18  Federico Mena Quintero  <federico@novell.com>

	* xrandr-capplet.c (select_current_output_from_dialog_position):
	Fix the type of the "output" variable.

==================== 2.25.3 ====================

2008-12-16  Federico Mena Quintero  <federico@novell.com>

	https://bugzilla.novell.com/show_bug.cgi?id=450141 - Help button
	in the Display capplet does nothing.

	* xrandr-capplet.c (run_application): Hide the Help button as we
	have no help to show for this capplet yet.
	(hide_help_button): New function.

2008-12-16  Frederic Peters  <fpeters@0d.be>

	* xrandr-capplet.c: (select_current_output_from_dialog_position):
	Declare variable, fix build.

2008-12-15  Federico Mena Quintero  <federico@novell.com>

	* xrandr-capplet.c (on_screen_changed): Use
	select_current_output_from_dialog_position() instead of selecting
	an output ourselves.
